--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "mongoose": "^5.11.7",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
